# MyTunes

./: .gitignore  README.md  schema.prisma
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
desktop/src-tauri/src/types/: mod.rs  song.rs
documentation/: Dokumentáció.docx  SWOT.pptx  documentation.docx  mytunes presentation.pptx  mytunes.drawio  mytunes.drawio.html  mytunes.gantt  mytunes_presentation.pptx  presentation_script.docx  ~$cumentation.docx  ~$kumentáció.docx
documentation/ERmodel/: mytunes.drawio  mytunes.sql  mytunes_db.drawio
documentation/SWOT/: SWOT.pptx
documentation/Wireframe/: wireframe.ai
www/: .dockerignore  .env.example  Dockerfile  composer.json  docker-compose.yaml  docker-entrypoint.sh  eslint.config.js  package-lock.json  package.json  vite.config.ts
www.bak/: .env.example  package.json
www.bak/app/Models/: Playlist.php  Song.php  User.php
www.bak/database/migrations/: 0002_01_00_000000_create_songs_table.php  0003_01_00_000000_create_playlists_table.php
www/app/Models/: OrderedSong.php  Playlist.php  PlaylistSong.php  Session.php  Song.php  User.php  UserLike.php
www/app/Providers/: AuthServiceProvider.php
www/database/factories/: PlaylistFactory.php  SongFactory.php  UserFactory.php
www/database/migrations/: 0001_01_01_000000_create_users_table.php  (+5 more)
www/nginx/: default.conf
www/routes/: api.php  utils.php  web.php
(+102 files in other folders)
