[package]
name = "mytunes"
description = "Music streaming"
version = "0.0.1"
authors = [
    "Hubblika <hubblika@gmail.com>",
    "ItsMeAkos <itsmeakos@protonmail.com>"
]
edition = "2021"
repository = "https://github.com/hubblika/mytunes.git"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mytunes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["json"] }
